--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "This project is meant to be a kind of template to start working with Cucumber and Cypress just cloning the project.",
   "main": "index.js",
   "scripts": {
-    "cypress:runner": "cypress open",
-    "cypress:execution": "cypress run"
+    "test_open": "cypress open",
+    "test_run": "cypress run"
   },
   "keywords": [
     "cypress"
