--- a/.cypress-cucumber-preprocessorrc.json
+++ b/.cypress-cucumber-preprocessorrc.json
@@ -1,15 +1,17 @@
 {
     "json": {
-      "enabled": true,
+      "enabled": false,
       "output": "jsonlogs/log.json",
       "formater": "cucumber-json-formatter.exe"
     },
     "messages": {
-      "enabled": true,
+      "enabled": false,
       "output": "jsonlogs/messages.ndjson"
     },
     "html": {
-      "enabled": true
+      "enabled": true,
+      "output": "reports/cucumber-report.html",
+      "overwrite": false
     },
     "stepDefinitions": [
         "cypress/e2e/step_definitions/*.{js,ts}"
