--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test_open": "cypress open",
-    "test_run": "cypress run"
+    "test_run": "cypress run",
+    "test_run_chrome": "cypress run --browser chrome --e2e",
+    "test_run_jjc": "cypress run --browser chrome --e2e TAGS='@jjc'"
   },
   "keywords": [
     "cypress"
@@ -17,7 +19,10 @@
     "@badeball/cypress-cucumber-preprocessor": "^12.0.1",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "cypress": "^10.4.0",
+    "cypress-downloadfile": "^1.2.2",
     "esbuild": "^0.14.48",
-    "multiple-cucumber-html-reporter": "^1.21.4"
+    "multiple-cucumber-html-reporter": "^1.21.4",
+    "pdf-parse": "^1.1.1",
+    "tesseract.js": "^2.1.1"
   }
 }
