--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "cypress-cucumber-boilerplate",
-  "version": "2.0.0",
-  "description": "This project is meant to be a kind of template to start working with Cucumber and Cypress just cloning the project.",
+  "name": "cypress-cucumber-applitools",
+  "version": "1.0.0",
+  "description": "This project is meant to be a kind of template to start working with Cucumber, Cypress and applitools.",
   "main": "index.js",
   "scripts": {
     "test_open": "cypress open",
     "test_run": "cypress run",
     "test_run_chrome": "cypress run --browser chrome --e2e",
-    "test_run_jjc": "cypress run --browser chrome --e2e TAGS='@jjc'"
+    "test_run_jjc": "cypress run --browser chrome --e2e TAGS='@demo'",
+    "run_demo": "cypress run -e TAGS='@demo'"
   },
   "keywords": [
     "cypress"
   ],
-  "author": "cucumber",
+  "author": "JJC",
   "license": "ISC",
   "devDependencies": {
     "@applitools/eyes-cypress": "^3.27.1",
@@ -20,6 +21,7 @@
     "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
     "cypress": "^10.4.0",
     "cypress-downloadfile": "^1.2.2",
+    "cypress-mochawesome-reporter": "^3.2.2",
     "esbuild": "^0.14.48",
     "multiple-cucumber-html-reporter": "^1.21.4",
     "pdf-parse": "^1.1.1",
